package farmmarket.exceptions;

public class DuplicateIdException extends Exception {
    public DuplicateIdException(String message) {
        super(message);
    }
}
