package farmmarket.interfaces;

public interface Persistable {
    String toCsv();
}
